gitrepo-sync-volume-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: gitrepo-sync
spec:
  containers:
  - image: openweb/git-sync:0.0.1
    name: git-sync
    volumeMounts:
    - name: html
      mountPath: /user/app
  - image: nginx:alpine
    name: web-server
    volumeMounts:
    - name: html
      mountPath: /usr/share/nginx/html
      readOnly: true
    ports:
    - containerPort: 80
      protocol: TCP
  volumes:
  - name: html
    emptyDir: {}
