kubia-liveliness-prob.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubia-liveliness-additional
  labels:
    created_method: manual
    env: prod
spec:
  containers:
  - image: luksa/kubia-unhealthy
    name: kubia
    ports:
    - containerPort: 8080
      protocol: TCP
    livenessProbe:
      httpGet:
        path: /
        port: 8080
      initialDelaySeconds: 15
