kubia-manual-gpu.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubia-manual-gpu
  labels:
    created_method: manual
    env: dev
spec:
  containers:
  - image: luksa/kubia
    name: kubia
    ports:
    - containerPort: 8080
      protocol: TCP
  nodeSelector:
    gpu: "true"
