kubia-manual-v2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubia-manualv2
  labels:
    created_method: manual
    env: prod
spec:
  containers:
  - image: luksa/kubia
    name: kubia
    ports:
    - containerPort: 8080
      protocol: TCP
